# gnome-connection-manager

./: .gitignore  AGENTS.md  DEVELOPING.md  Makefile  PROJECT_STRUCTURE.md  README.md  gnome-connection-manager.desktop  gnome-connection-manager.glade  gnome_connection_manager.py  justfile  postinst  pyproject.toml
data/gschemas/: gschemas.compiled  org.kuthulu.GnomeConnectionManager.gschema.xml
data/ui/: gnome-connection-manager.glade
docs/: DEVELOPING.md  PROJECT_STRUCTURE.md
src/gnome_connection_manager/: __init__.py  __main__.py  app.py  main.py
src/gnome_connection_manager/ui/: __init__.py
src/gnome_connection_manager/utils/: SimpleGladeApp.py  __init__.py  pyAES.py  urlregex.py
tests/: conftest.py  test_application.py  test_config.py  test_encryption.py  test_hosts.py  test_main.py  test_package.py  test_urlregex.py  test_wconfig.py  test_whost.py  test_wmain.py
